--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,21 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"type": "project",
+    "require-dev": {
+        "way/generators": "2.*",
+        "barryvdh/laravel-debugbar":"1.*",
+	    "fzaninotto/faker": "v1.3.0"
+    },
 	"require": {
 		"laravel/framework": "4.2.*"
 	},
 	"autoload": {
+	  "psr-4": {
+		"credits\\": "app/credits"
+	  },
 		"classmap": [
 			"app/commands",
 			"app/controllers",
-			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
