--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ composer.lock
 .env.*.php
 .env.php
 .DS_Store
-/app/config/database.php
-/app/config/mail.php
+app/config/mail.php
 Thumbs.db
-/.htaccess
+.htaccess
+
+app/config/database.php
