--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   },
   "require": {
     "laravel/framework": "4.2.*",
-    "maatwebsite/excel": "~2.0.0"
+    "maatwebsite/excel": "1.*",
+    "dompdf/dompdf" : "0.6.*"
   },
   "autoload": {
     "psr-4": {
