--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "laravel/framework": "4.2.*",
     "maatwebsite/excel": "1.*",
     "dompdf/dompdf" : "0.6.*",
-    "brainboxlabs/brain-socket": "v1.0.0",
-    "redbaron76/larapush": "dev-master"
+    "brainboxlabs/brain-socket": "v1.0.0"
   },
   "autoload": {
     "psr-4": {
