--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "maatwebsite/excel": "1.*",
     "dompdf/dompdf" : "0.6.*",
     "brainboxlabs/brain-socket": "v1.0.0",
-    "jenssegers/date": "~2.0"
+    "jenssegers/date": "~2.0",
+    "thujohn/pdf": "dev-master"
   },
   "autoload": {
     "psr-4": {
