--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ composer.lock
 app/config/mail.php
 Thumbs.db
 .htaccess
-/public/upload/
+/public/upload/*
 *.sql
 /node_modules/
-/public/sliders/
-/public/exports/
-/public/toUpload/
+/public/sliders/*
+/public/exports/*
+/public/toUpload/*
 /app/config/app.php
