--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
   "keywords": ["framework", "laravel"],
   "license": "MIT",
   "type": "project",
-  "guzzlehttp/guzzle": "~4.0",
   "require-dev": {
     "way/generators": "2.*",
     "barryvdh/laravel-debugbar":"1.*",
@@ -17,7 +16,8 @@
     "barryvdh/laravel-dompdf": "0.4.*",
     "brainboxlabs/brain-socket": "v1.0.0",
     "jenssegers/date": "~2.0",
-    "thujohn/pdf": "dev-master"
+    "thujohn/pdf": "dev-master",
+    "guzzlehttp/guzzle": "~6.0"
   },
   "autoload": {
     "psr-4": {
